css/main.css
html {
  box-sizing: border-box;
  -moz-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -webkit-text-size-adjust: 100%;
  text-size-adjust: 100%;
  font-family: "Proxima Nova", sans;
  line-height: 1.5;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body {
  margin: 0;
  position: relative;
  display: block;
  background-color: #222;
}

img {
  display: block;
  width: 100%;
}

h1,
h2,
h3,
h4,
h5,
p {
  color: #fff;
}

.skip-links {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.skip-links a {
  position: absolute;
  top: -3em;
  background: #fff;
  color: #000;
}

.skip-links a:focus {
  top: 0;
  padding: .5em 2em;
  z-index: 100;
}

header {
  background-color: #000;
  background-image: url("../images/wave-banner.png");
  text-align: center;
  padding-bottom: 1rem;
  border-bottom: 1rem solid #000;
}

.about-banner {
  background-color: #000;
  background-image: url("../images/workstation-image.jpg");
  background-position: 50% 0;
  text-align: center;
  padding-bottom: 1rem;
  border-bottom: 1rem solid #000;
  min-height: 300px;
}

.portfolio-banner {
  background-color: #000;
  background-image: url("../images/file-portfolio.jpg");
  background-position: 50% 0;
  text-align: center;
  padding-bottom: 1rem;
  border-bottom: 1rem solid #000;
  min-height: 300px;
}

.logo {
  display: block;
  margin-left: auto;
  margin-right: auto;
  max-width: 300px;
  margin-top: .5em;
  margin-bottom: .5em;
}

h1 {
  margin: 1rem .5em 0;
  font-size: 2.5rem;
  line-height: 1;
}

.about-banner h1 {
  padding-top: 90px;
}

.portfolio-banner h1 {
  padding-top: 90px;
}

.secondary-header {
  margin: 0 0 1rem;
  font-size: 2.5rem;
  line-height: 1;
}

.buttons {
  display: flex;
  justify-content: center;
}

.buttons a {
  display: inline-block;
  text-decoration: none;
  margin-left: auto;
  margin-right: auto;
  color: #fff;
}

.button {
  padding: .5rem 1rem;
  text-align: center;
  border: 3px solid #f6bb0a;
  display: inline-block;
  margin: 1em;
  transition-duration: .6s;
  cursor: pointer;
  font-weight: bold;
}

.button:hover {
  background-color: #f6bb0a;
}

nav {
  background-color: #000;
  padding: 1em 0;
}

nav ul {
  display: flex;
  list-style: none;
  margin: 0 1rem;
  padding: 0;
  justify-content: flex-end;
}

nav li {
  margin-left: 1rem;
}

nav a {
  display: inline-block;
  text-decoration: none;
  color: #fff;
  padding: .5em 0;
}

.icon svg {
  position: relative;
  height: 16px;
  width: 16px;
  fill: currentColor;
}

nav a :hover {
  transition-duration: .6s;
  color: #f9013f;
}

.nav-logo {
  display: flex;
  margin: 0 1rem;
  padding: 0;
  width: 30px;
  justify-content: flex-start;
  position: absolute;
  top: 1em;
}

main {
  padding: 0 2rem;
  margin: 1rem 0;
}

.blurb {
  font-size: 1.25rem;
}

article {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  background-color: #000;
  margin-top: 1em;
  padding: 1em;
}

article img {
  max-width: 300px;
  max-height: 300px;
  align-items: center;
}

article p {
  font-size: .8rem;
  margin: 0 0 1.5rem;
}

.contactinfo {
  background-color: #f9013f;
  padding: 1em;
}

h2 {
  margin-bottom: .5em;
  font-size: 1.8rem;
  line-height: 1.6rem;
}

h3 {
  margin-bottom: 0;
  font-size: 1.5rem;
}

h4 {
  font-size: 1.25rem;
  margin: 0;
}

h5 {
  font-size: 1rem;
  margin: .5rem 0 0;
}

.contactinfo p {
  font-size: 1rem;
  margin: 0;
}

footer {
  background-color: #000;
  text-align: center;
  font-size: .8em;
}

.socialmedia svg {
  width: 40px;
  height: 40px;
  margin-top: 1em;
  fill: currentColor;
}

.socialmedia ul {
  display: flex;
  flex-direction: row;
  justify-content: center;
  list-style: none;
}

.socialmedia li {
  margin-left: .5rem;
  margin-right: .5rem;
}

footer a {
  color: #fff;
}

.copyrightinfo p {
  color: #fff;
}

@media only screen and (min-width: 38em) {

  section.type-of-work {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    grid-gap: 1em;
  }

  .profile-image img {
    max-width: 250px;
    height: auto;
    float: left;
    margin: 0 1em;
  }

  article p {
    margin-bottom: auto;
  }

  .portfolio {
    max-width: 100%;
    margin: auto;
  }

  .portfolio img {
    width: auto;
    height: auto;
    object-fit: cover;
    margin: auto;
  }

  .portfolio article {
    display: flex;
    flex-wrap: wrap;
    position: relative;
  }

  .contactinfo {
    max-width: 50%;
  }

}

@media only screen and (min-width: 60em) {

  section {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    grid-template-rows: 1fr;
    grid-gap: 1em;
  }

  .profile-image img {
    max-width: 100px;
    height: auto;
    float: left;
    margin: 0 1em;
  }

  .contactinfo {
    max-width: 25%;
  }

}

